# raytracer

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_examples.cpp
demo/: CMakeLists.txt  main.cpp
docs/: design.md  raytracer.mdj
include/raytracer/: camera.h  canvas.h  class.hpp  colours.h  cone.h  csg.h  cube.h  cylinder.h  group.h  lighting.h  materials.h  matrix.h  matrix_2d.h  obj_parser.h  patterns.h  plane.h  rays.h  renderer.h  shapes.h  sphere.h  textures.h  triangle.h  tuples.h  types.hpp  utils.h  world.h
include/raytracer/common/: obj_parser.hpp
include/raytracer/environment/: camera.hpp  lighting.hpp  world.hpp
include/raytracer/logging/: logging.hpp
include/raytracer/materials/: material.hpp  patterns.hpp  textures.hpp
include/raytracer/math/: matrix.hpp  matrix_2d.hpp  tuples.hpp
include/raytracer/renderer/: canvas.hpp  colour.hpp  job_finalizer.hpp  job_scheduler.hpp  ray.hpp  render_common.hpp  renderer.hpp
include/raytracer/shapes/: cone.hpp  csg.hpp  cube.hpp  cylinder.hpp  group.hpp  plane.hpp  shape.hpp  sphere.hpp  triangle.hpp
include/raytracer/utils/: macros.hpp
source/: CMakeLists.txt  camera.cpp  camera.h  canvas.cpp  canvas.h  colours.cpp  colours.h  cone.cpp  cone.h  csg.cpp  csg.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  group.cpp  group.h  intersection.cpp  intersection.h  lighting.cpp  lighting.h  materials.cpp  materials.h  matrix.h  matrix_2d.cpp  matrix_2d.h  obj_parser.cpp  obj_parser.h  patterns.cpp  patterns.h  plane.cpp  plane.h  rays.cpp  rays.h  renderer.cpp  renderer.h  shapes.cpp  shapes.h  sphere.cpp  sphere.h  (+9 more)
src/: CMakeLists.txt  camera.cpp  canvas.cpp  class.cpp  colours.cpp  cone.cpp  csg.cpp  cube.cpp  cylinder.cpp  group.cpp  internal.cpp  internal.hpp  intersection.cpp  lighting.cpp  materials.cpp  matrix.cpp  matrix_2d.cpp  obj_parser.cpp  patterns.cpp  plane.cpp  rays.cpp  renderer.cpp  shapes.cpp  sphere.cpp  textures.cpp  triangle.cpp  tuples.cpp  utils.cpp  world.cpp
src/common/: obj_parser.cpp  utils.cpp
src/environment/: camera.cpp  lighting.cpp  world.cpp
src/logging/: logging.cpp  logging.hpp
src/materials/: material.cpp  patterns.cpp  textures.cpp
src/math/: matrix.cpp  matrix_2d.cpp  tuples.cpp
src/renderer/: canvas.cpp  colour.cpp  intersection.cpp  job_finalizer.cpp  job_scheduler.cpp  ray.cpp  renderer.cpp
src/shapes/: cone.cpp  csg.cpp  cube.cpp  cylinder.cpp  group.cpp  plane.cpp  shape.cpp  sphere.cpp  triangle.cpp
src/utils/: obj_parser.cpp  utils.cpp
tests/: CMakeLists.txt  test_camera.cpp  test_canvas.cpp  test_class.cpp  test_colours.cpp  test_csg_set_operations.cpp  test_cubes.cpp  test_cylinder_and_cones.cpp  test_groups.cpp  test_lighting.cpp  test_log_async.cpp  test_materials.cpp  test_matrix.cpp  test_matrix_2d.cpp  test_parser.cpp  test_pattern.cpp  test_planes.cpp  test_rays.cpp  test_renderer.cpp  test_shapes.cpp  test_spheres.cpp  test_textures.cpp  test_triangles.cpp  test_tuples.cpp  test_world.cpp
